--- a/styles.css
+++ b/styles.css
@@ -35,4 +35,8 @@ body {
   }
 .player-info p{
     text-align: justify;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+    color: gray;
 }
