--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,63 @@ section#featured_area {
     color: gray;
 }
 
+#newsletter {
+  background: #e6b9b9;
+}
+form {
+  width: 428px;
+  margin: 0px auto;
+  padding: 50px;
+}
+
+input {
+  font-family: "PT Sans Narrow";
+  font-size: 20px;
+}
+
+.info {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.info input {
+  display: block;
+  width: 300px;
+  height: 20px;
+  border: 0;
+  border-radius: 3px;
+  margin: 0 0 10px 0;
+  padding: 12px 10px;
+  background: #fff;
+}
+
+.info input:last-child {
+  margin: 0;
+}
+
+.info input:focus {
+  background: #eee;
+  outline: none;
+}
+
+input[type="submit"] {
+  vertical-align: top;
+  margin-top: 15px;
+  padding: 10px 24px;
+  border: 0;
+  border-radius: 3px;
+  background: pink;
+  cursor: pointer;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: #fff;
+  background: linear-gradient(45deg, #ff6c54, #ffa754);
+}
+
+input[type="submit"]:hover {
+  background: linear-gradient(180deg, #ff6c54, #ffa754);
+}
+
 /* footer styles */
 footer {
   text-align: center;
@@ -163,6 +220,7 @@ footer {
   .banner-right img {
     width: 429px;
     margin-top: 44px;
+    height: 220px;
   }
   .player-list-inner{
     grid-template-columns: repeat(2, 1fr);
@@ -199,6 +257,7 @@ footer {
   .banner-right img {
     width: 329px;
     margin-top: 44px;
+    height: 220px;
   }
   .player-list-inner {
     grid-template-columns: repeat(1, 1fr);
